testsuite/tests/python/project_unit_provider/test.out
Trying to build with {'project_file': None}
   ... got a TypeError exception: `project_file` argument must be a bytes string (got NoneType)
Trying to build with {'project_file': 1}
   ... got a TypeError exception: `project_file` argument must be a bytes string (got int)
Trying to build with {'project_file': b'p.gpr', 'scenario_vars': {1: b'bar'}}
   ... got a TypeError exception: `scenario_vars` argument must be a dict mapping bytes strings to bytes strings (got int)
Trying to build with {'project_file': b'p.gpr', 'scenario_vars': {b'bar': 1}}
   ... got a TypeError exception: `scenario_vars` argument must be a dict mapping bytes strings to bytes strings (got int)
Trying to build with {'project_file': 'p.gpr', 'scenario_vars': {b'SRC_DIR': b'src1'}}
   ... success!
Trying to build with {'project_file': 'p.gpr', 'project': b'no_such_project', 'scenario_vars': {b'SRC_DIR': b'src1'}}
   ... got a ProjectError exception: no such project: no_such_project
Trying to build with {'project_file': 'p.gpr', 'project': 'no_such_project', 'scenario_vars': {b'SRC_DIR': b'src1'}}
   ... got a ProjectError exception: no such project: no_such_project
Trying to build with {'project_file': 'p.gpr', 'project': 'q', 'scenario_vars': {b'SRC_DIR': b'src1'}}
   ... success!
For SRC_DIR=src1:
<SubtypeIndication p2.ads:4:8-4:22> resolves to:
  <ConcreteTypeDecl ["Record_Type"] p1.ads:2:4-2:36>
For SRC_DIR=src2:
<SubtypeIndication p2.ads:5:8-5:22> resolves to:
  <ConcreteTypeDecl ["Record_Type"] p1.ads:3:4-5:15>
Done.
